Trying some responsive stuff

--- a/homePage.html
+++ b/homePage.html
@@ -26,8 +26,8 @@
     <main>
         <h2>Masques du moment:</h2>
 
+        <h3>Masques de Noël</h3>
         <section>
-            <h3>Masques de Noël</h3>
             <div class="gallery">
                 <a href="productPage.html"><img src="imgs/chrismasMask1.jpg"></a>
             </div>
@@ -39,11 +39,17 @@
             </div>
         </section>
 
+        <h3>Masques les plus populaires</h3>
         <section>
-            <h3>Masques les plus populaires</h3>
-            <div class="gallery"><img src="imgs/chrismasMask1.jpg"></div>
-            <div class="gallery"><img src="imgs/chrismasMask2.jpg"></div>
-            <div class="gallery"><img src="imgs/chrismasMask3.jpg"></div>
+            <div class="gallery">
+                <a href="productPage.html"><img src="imgs/chrismasMask3.jpg"></a>
+            </div>
+            <div class="gallery">
+                <a href="productPage.html"><img src="imgs/chrismasMask3.jpg"></a>
+            </div>
+            <div class="gallery">
+                <a href="productPage.html"><img src="imgs/chrismasMask3.jpg"></a>
+            </div>
         </section>
     </main>
 
