--- a/homePage.html
+++ b/homePage.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1><a href="homePage.html"> MON SITE DE VENTE DE MASQUES :))) </a></h1>
+        <h1><a href="homePage.html">Maskagogo</a></h1>
         <!-- Faire un joli logo, avec a coté les rublriques qui sommes nous etc
              (a moins de mettre les contact us etc dans le footer -->
     </header>
