--- a/chrismasMasks.html
+++ b/chrismasMasks.html
@@ -3,24 +3,25 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel = "stylesheet" href = "style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Mon site (faudra trouver un nom)</title>
 </head>
 
 <body>
     <header>
-        <h1><a href="homePage.html"> MON SITE DE VENTE DE MASQUES :))) </a></h1>
+        <h1><a href="homePage.html">Maskagogo</a></h1>
         <!-- Mettre des liens ici, genre le panier ect-->
     </header>
 
     <nav>
         <!--Ici on aura tous nos menus pour naviguer entre les pages du site-->
         <ul>
-            <li><a href = "allMasks.html">Tous les masques</a></li>
+            <li><a href="allMasks.html">Tous les masques</a></li>
             <li><a href="popularMasks.html">Masques les plus populaires</a></li>
             <li><a href="chrismasMasks.html">Masques de Noël</a></li>
             <li id="panier"><a>Panier</a></li>
         </ul>
     </nav>
 </body>
+
 </html>
