--- a/productPage.html
+++ b/productPage.html
@@ -3,22 +3,23 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel = "stylesheet" href = "style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Mon site (faudra trouver un nom)</title>
 </head>
 
 <body>
     <header>
-        <h1><a href="homePage.html"> MON SITE DE VENTE DE MASQUES :))) </a></h1>
+        <h1><a href="homePage.html">Maskagogo</a></h1>
     </header>
 
     <nav>
         <ul>
-            <li><a href = "allMasks.html">Tous les masques</a></li>
+            <li><a href="allMasks.html">Tous les masques</a></li>
             <li><a href="popularMasks.html">Masques les plus populaires</a></li>
             <li><a href="chrismasMasks.html">Masques de Noël</a></li>
             <li id="panier"><a>Panier</a></li>
         </ul>
     </nav>
 </body>
+
 </html>
