added azdd to cart button bellow product images, and price

--- a/homePage.html
+++ b/homePage.html
@@ -27,28 +27,57 @@
         <h2>Masques du moment:</h2>
 
         <h3>Masques de Noël</h3>
+
         <section>
+
             <div class="gallery">
                 <a href="productPage.html"><img src="imgs/chrismasMask1.jpg"></a>
+                <div class="desc">
+                    <a class="button" href="productPage.html">Add to card</a>
+                    <p class="prix">5€</p>
+                </div>
             </div>
+
             <div class="gallery">
                 <a href="productPage.html"><img src="imgs/chrismasMask2.jpg"></a>
+                <div class="desc">
+                    <a class="button" href="productPage.html">Add to card</a>
+                    <p class="prix">5€</p>
+                </div>
             </div>
+
             <div class="gallery">
                 <a href="productPage.html"><img src="imgs/chrismasMask3.jpg"></a>
+                <div class="desc">
+                    <a class="button" href="productPage.html">Add to card</a>
+                    <p class="prix">5€</p>
+                </div>
             </div>
+
         </section>
 
         <h3>Masques les plus populaires</h3>
         <section>
             <div class="gallery">
                 <a href="productPage.html"><img src="imgs/chrismasMask3.jpg"></a>
+                <div class="desc">
+                    <a class="button" href="productPage.html">Add to card</a>
+                    <p class="prix">5€</p>
+                </div>
             </div>
             <div class="gallery">
                 <a href="productPage.html"><img src="imgs/chrismasMask3.jpg"></a>
+                <div class="desc">
+                    <a class="button" href="productPage.html">Add to card</a>
+                    <p class="prix">5€</p>
+                </div>
             </div>
             <div class="gallery">
                 <a href="productPage.html"><img src="imgs/chrismasMask3.jpg"></a>
+                <div class="desc">
+                    <a class="button" href="productPage.html">Add to card</a>
+                    <p class="prix">5€</p>
+                </div>
             </div>
         </section>
     </main>
