better header, home and cart icons, cart page

--- a/chrismasMasks.html
+++ b/chrismasMasks.html
@@ -4,22 +4,25 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <title>Mon site (faudra trouver un nom)</title>
+    <title>Maskagogo ~ Exclu Noël</title>
 </head>
 
 <body>
     <header>
+
+        <a href="homePage.html"><img height="100" id="home" src=icons/home.svg></a>
+
         <h1><a href="homePage.html">Maskagogo</a></h1>
-        <!-- Mettre des liens ici, genre le panier ect-->
+
+        <a href="cart.html"><img height="100" id="home" src=icons/cart.svg></a>
+
     </header>
 
     <nav>
-        <!--Ici on aura tous nos menus pour naviguer entre les pages du site-->
         <ul>
             <li><a href="allMasks.html">Tous les masques</a></li>
             <li><a href="popularMasks.html">Masques les plus populaires</a></li>
             <li><a href="chrismasMasks.html">Masques de Noël</a></li>
-            <li id="panier"><a>Panier</a></li>
         </ul>
     </nav>
 </body>
