--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <title>Maskagogo ~ Top masques</title>
+    <title>Maskagogo ~ Panier</title>
 </head>
 
 <body>
