--- a/productPage.html
+++ b/productPage.html
@@ -4,12 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <title>Mon site (faudra trouver un nom)</title>
+    <title>Maskagogo ~ Page produit</title>
 </head>
 
 <body>
     <header>
+
+        <a href="homePage.html"><img height="100" id="home" src=icons/home.svg></a>
+
         <h1><a href="homePage.html">Maskagogo</a></h1>
+
+        <a href="cart.html"><img height="100" id="home" src=icons/cart.svg></a>
+
     </header>
 
     <nav>
@@ -17,7 +23,6 @@
             <li><a href="allMasks.html">Tous les masques</a></li>
             <li><a href="popularMasks.html">Masques les plus populaires</a></li>
             <li><a href="chrismasMasks.html">Masques de Noël</a></li>
-            <li id="panier"><a>Panier</a></li>
         </ul>
     </nav>
 </body>
