Better everithing on homepage, fixed html errors

--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <title>Maskagogo ~ Acceuil</title>
+    <title>Maskagogo ~ Accueil</title>
 </head>
 
 <body>
     <header>
 
-        <a href="homePage.html"><img height="100" id="home" src=icons/home.svg></a>
+        <a href="homePage.html"><img alt="Page d'acceuil" height="100" src=icons/home.svg></a>
 
         <h1><a href="homePage.html">Maskagogo</a></h1>
 
-        <a href="cart.html"><img height="100" id="home" src=icons/cart.svg></a>
+        <a href="cart.html"><img alt="Panier" height="100" src=icons/cart.svg></a>
 
     </header>
 
@@ -27,62 +27,73 @@
     </nav>
 
     <main>
-        <h2>Masques du moment:</h2>
 
         <h3>Masques de Noël</h3>
-
+        
         <section>
-
+            
             <div class="gallery">
-                <a href="productPage.html"><img src="imgs/chrismasMask1.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <a class="button" href="productPage.html">Add to card</a>
+                    <p>Motif truc muche</p>
                     <p class="prix">5€</p>
+                    <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
 
             <div class="gallery">
-                <a href="productPage.html"><img src="imgs/chrismasMask2.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <a class="button" href="productPage.html">Add to card</a>
+                    <p>Motif truc muche</p>
                     <p class="prix">5€</p>
+                    <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
 
             <div class="gallery">
-                <a href="productPage.html"><img src="imgs/chrismasMask3.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <a class="button" href="productPage.html">Add to card</a>
+                    <p>Motif truc muche</p>
                     <p class="prix">5€</p>
+                    <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
 
         </section>
 
         <h3>Masques les plus populaires</h3>
+
         <section>
+
             <div class="gallery">
-                <a href="productPage.html"><img src="imgs/chrismasMask3.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <a class="button" href="productPage.html">Add to card</a>
+                    <p>Motif truc muche</p>
                     <p class="prix">5€</p>
+                    <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
+
             <div class="gallery">
-                <a href="productPage.html"><img src="imgs/chrismasMask3.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <a class="button" href="productPage.html">Add to card</a>
+                    <p>Motif truc muche</p>
                     <p class="prix">5€</p>
+                    <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
+
             <div class="gallery">
-                <a href="productPage.html"><img src="imgs/chrismasMask3.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <a class="button" href="productPage.html">Add to card</a>
+                    <p>Motif truc muche</p>
                     <p class="prix">5€</p>
+                    <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
+
         </section>
+
     </main>
 
 </body>
