fixed link to stylesheet

--- a/pages/allMasks.html
+++ b/pages/allMasks.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Maskagogo ~ Tous nos masques !</title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <title>Maskagogo ~ Accueil</title>
 </head>
 
 <body>
