--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Maskagogo ~ Accueil</title>
 </head>
 
@@ -29,9 +29,9 @@
     <main>
 
         <h3>Masques de Noël</h3>
-        
+
         <section>
-            
+
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
