--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -10,11 +10,11 @@
 <body>
     <header>
 
-        <a href="homePage.html"><img alt="Page d'acceuil" height="100" src=icons/home.svg></a>
+        <a href="homePage.html"><img alt="Page d'acceuil" height="100" src=../icons/home.svg></a>
 
         <h1><a href="homePage.html">Maskagogo</a></h1>
 
-        <a href="cart.html"><img alt="Panier" height="100" src=icons/cart.svg></a>
+        <a href="cart.html"><img alt="Panier" height="100" src=../icons/cart.svg></a>
 
     </header>
 
@@ -33,7 +33,7 @@
         <section>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask1.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
@@ -42,7 +42,7 @@
             </div>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask2.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
@@ -51,7 +51,7 @@
             </div>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
@@ -66,7 +66,7 @@
         <section>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
@@ -75,7 +75,7 @@
             </div>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
@@ -84,7 +84,7 @@
             </div>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
+                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
