--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Maskagogo ~ Accueil</title>
+    <title>Maskagogo !</title>
 </head>
 
 <body>
@@ -23,6 +23,12 @@
             <li><a href="allMasks.html">Tous les masques</a></li>
             <li><a href="popularMasks.html">Masques les plus populaires</a></li>
             <li><a href="chrismasMasks.html">Masques de Noël</a></li>
+            <li id="search">
+                <form action="searchPage.html">
+                    <button class="button" type="submit" vertical-align:middle><span>Rechercher</span></button>
+                    <input type="text"  placeholder="ex: Masque Bleu" value="" id="search-query">
+                  </form>
+            </li>
         </ul>
     </nav>
 
