added footer and some pages

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -31,6 +31,13 @@
             </li>
         </ul>
     </nav>
+
+    <footer>
+        <ul>
+            <li><a href="us.html">Qui sommes nous ?</a></li>
+            <li><a href="ourMethods.html">Détails tecniques</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
