--- a/pages/productPage.html
+++ b/pages/productPage.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/productPages.css" />
     <title>Maskagogo !</title>
 </head>
 
@@ -31,6 +31,36 @@
             </li>
         </ul>
     </nav>
+
+    <main>
+        <section>
+
+            <div class="gallery">
+                <img alt="Masque" src="../imgs/chrismasMask3.jpg">
+            </div>
+
+            <div class="productDesc">
+                <h4>Masque motif guirlande colorée</h4>
+                <p>
+                    Nos masque sont d'une qualité exeptionnelle afin de vous apporter un confort utlime pendant vos longues journés au travail. 
+                    Notre methode d'impression est infaillible, et malgré de futurs nombreux lavages, Le motif restera toujours aussi net.
+                </p>
+                
+                <p>
+                    Les masque sont lavables autant de fois que vous le souhaitez.
+                    Ils sont constitués de deux couches, entres lesquels vous pouvez inserer un filtre pour encore plus de sécurité.
+                </p>
+            </div>
+
+            <div class="addToCart">
+                <p>Prix Hors Taxes : 13.99€</p>
+                <p>Prix avec taxes : 16.99€</p>
+                <p>Frais de port en france : 4€</p>
+                <a class="button" href="cart.html">Ajouter au panier</a>
+            </div>
+
+        </section>
+    </main>
 
     <footer>
         <ul>
