--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Maskagogo !</title>
 </head>
 
 <body>
     <header>
 
-        <a href="index.html"><img alt="Page d'acceuil" height="100" src=../icons/home.svg></a>
+        <a href="index.html"><img alt="Page d'acceuil" height="100" src=icons/home.svg></a>
 
         <h1><a href="index.html">Maskagogo</a></h1>
 
-        <a href="cart.html"><img alt="Panier" height="100" src=../icons/cart.svg></a>
+        <a href="pages/cart.html"><img alt="Panier" height="100" src=icons/cart.svg></a>
 
     </header>
 
     <nav>
         <ul>
-            <li><a href="allMasks.html">Tous les masques</a></li>
-            <li><a href="popularMasks.html">Masques les plus populaires</a></li>
-            <li><a href="chrismasMasks.html">Masques de Noël</a></li>
+            <li><a href="pages/allMasks.html">Tous les masques</a></li>
+            <li><a href="pages/popularMasks.html">Masques les plus populaires</a></li>
+            <li><a href="pages/chrismasMasks.html">Masques de Noël</a></li>
             <li id="search">
-                <form action="searchPage.html">
+                <form action="pages/searchPage.html">
                     <button class="button" type="submit" vertical-align:middle><span>Rechercher</span></button>
                     <input type="text"  placeholder="ex: Masque Bleu" value="" id="search-query">
                   </form>
@@ -39,29 +39,29 @@
         <section>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
+                <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
-                    <a class="button" href="productPage.html">Acheter</a>
+                    <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
+                <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
-                    <a class="button" href="productPage.html">Acheter</a>
+                    <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
+                <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
-                    <a class="button" href="productPage.html">Acheter</a>
+                    <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
 
@@ -72,29 +72,29 @@
         <section>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
+                <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
-                    <a class="button" href="productPage.html">Acheter</a>
+                    <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
+                <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
-                    <a class="button" href="productPage.html">Acheter</a>
+                    <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
 
             <div class="gallery">
-                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
+                <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
                     <p>Motif truc muche</p>
                     <p class="prix">5€</p>
-                    <a class="button" href="productPage.html">Acheter</a>
+                    <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
 
@@ -104,8 +104,8 @@
 
     <footer>
         <ul>
-            <li><a href="us.html">Qui sommes nous ?</a></li>
-            <li><a href="ourMethods.html">Détails tecniques</a></li>
+            <li><a href="pages/us.html">Qui sommes nous ?</a></li>
+            <li><a href="pages/ourMethods.html">Détails tecniques</a></li>
         </ul>
     </footer>
 
