--- a/pages/searchPage.html
+++ b/pages/searchPage.html
@@ -10,9 +10,9 @@
 <body>
     <header>
 
-        <a href="index.html"><img alt="Page d'acceuil" height="100" src=../icons/home.svg></a>
+        <a href="../index.html"><img alt="Page d'acceuil" height="100" src=../icons/home.svg></a>
 
-        <h1><a href="index.html">Maskagogo</a></h1>
+        <h1><a href="../index.html">Maskagogo</a></h1>
 
         <a href="cart.html"><img alt="Panier" height="100" src=../icons/cart.svg></a>
 
