--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="pages/chrismasMasks.html">Masques de Noël</a></li>
             <li id="search">
                 <form action="pages/searchPage.html">
-                    <button class="button" type="submit" vertical-align:middle><span>Rechercher</span></button>
+                    <button class="button" type="submit" ><span>Rechercher</span></button>
                     <input type="text"  placeholder="ex: Masque Bleu" value="" id="search-query">
                   </form>
             </li>
