added cart page, and did some fixes

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div class="gallery">
                 <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
@@ -50,8 +50,8 @@
             <div class="gallery">
                 <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
@@ -59,8 +59,8 @@
             <div class="gallery">
                 <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
@@ -74,8 +74,8 @@
             <div class="gallery">
                 <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
@@ -83,8 +83,8 @@
             <div class="gallery">
                 <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
@@ -92,8 +92,8 @@
             <div class="gallery">
                 <a href="pages/productPage.html"><img alt="Masque" src="imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="pages/productPage.html">Acheter</a>
                 </div>
             </div>
