--- a/pages/cart.html
+++ b/pages/cart.html
@@ -25,12 +25,50 @@
             <li><a href="chrismasMasks.html">Masques de Noël</a></li>
             <li id="search">
                 <form action="searchPage.html">
-                    <button class="button" type="submit" vertical-align:middle><span>Rechercher</span></button>
+                    <button class="button" type="submit" ><span>Rechercher</span></button>
                     <input type="text"  placeholder="ex: Masque Bleu" value="" id="search-query">
                   </form>
             </li>
         </ul>
     </nav>
+
+    <main>
+        <h3>Panier</h3>
+
+        <section>
+
+            <div class="gallery">
+                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
+                <div class="desc">
+                    <p>Quantité: 2</p>
+                    <p class="prix">33.98 €</p>
+                    <a class="button" href="productPage.html">Retirer du panier</a>
+                </div>
+            </div>
+
+            <div class="gallery">
+                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
+                <div class="desc">
+                    <p>Quantité: 1</p>
+                    <p class="prix">16.99 €</p>
+                    <a class="button" href="productPage.html">Retirer du panier</a>
+                </div>
+            </div>
+
+            <div class="gallery">
+                <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
+                <div class="desc">
+                    <p>Quantité: 1</p>
+                    <p class="prix">16.99 €</p>
+                    <a class="button" href="productPage.html">Retirer du panier</a>
+                </div>
+            </div>
+
+        </section>
+
+        <h3 id=>Total : 71,96 € (67,96 € + 4 € Frais de Ports)</h3>
+
+    </main>
 
     <footer>
         <ul>
