--- a/pages/chrismasMasks.html
+++ b/pages/chrismasMasks.html
@@ -40,8 +40,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -49,8 +49,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -58,8 +58,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -71,8 +71,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -80,8 +80,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -89,8 +89,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -102,8 +102,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -111,8 +111,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -120,8 +120,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -133,8 +133,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -142,8 +142,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -151,8 +151,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -164,8 +164,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -173,8 +173,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -182,8 +182,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -195,8 +195,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -204,8 +204,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -213,8 +213,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
