--- a/pages/popularMasks.html
+++ b/pages/popularMasks.html
@@ -39,8 +39,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -48,8 +48,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -57,8 +57,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -70,8 +70,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -79,8 +79,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -88,8 +88,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -101,8 +101,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -110,8 +110,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -119,8 +119,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -132,8 +132,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -141,8 +141,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -150,8 +150,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -163,8 +163,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -172,8 +172,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -181,8 +181,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -194,8 +194,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask1.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°1</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -203,8 +203,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask2.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°2</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
@@ -212,8 +212,8 @@
             <div class="gallery">
                 <a href="productPage.html"><img alt="Masque" src="../imgs/chrismasMask3.jpg"></a>
                 <div class="desc">
-                    <p>Motif truc muche</p>
-                    <p class="prix">5€</p>
+                    <p>Motif Noël n°3</p>
+                    <p class="prix">16.99 €</p>
                     <a class="button" href="productPage.html">Acheter</a>
                 </div>
             </div>
