--- a/pages/cart.html
+++ b/pages/cart.html
@@ -66,7 +66,10 @@
 
         </section>
 
-        <h3 id=>Total : 71,96 € (67,96 € + 4 € Frais de Ports)</h3>
+        <section id=total>
+            <h3>Total : 71,96 € (67,96 € + 4 € Frais de Ports)</h3>
+            <a class="button" href="cart.html">Confirmer ma commande</a>
+        </section>
 
     </main>
 
