--- a/pages/ourMethods.html
+++ b/pages/ourMethods.html
@@ -32,6 +32,18 @@
         </ul>
     </nav>
 
+    <main>
+
+        <h3 style="margin-left: 0">Détails techniques :</h3>
+        <p>Fonctionnement de notre site : </p>
+        <p>Pour que votre design soit en vente sur notre site, vous devez nous l'envoyer en message privé sur notre compte instagram.</p>
+        <p>Ensuite, si nous le selectionons, nous le posterons sur le compte, et si les followers l'aprécient (beaucoup de like), nous le mettrons alors en production et en vente sur le site !</p>
+        <p>Les masques sont d'une grande qualité, probablement la meilleur du marché en France !</p>
+        <p>Ils sont constitué de deux couches de tissus entre lesquelles vous pourez insérer un filtre pour bénéficier d'encore plus de sécurité.</p>
+        <p>Si vosu avez des questions, vous pouvez nous contacter sur instagram !</p>
+
+    </main>
+
     <footer>
         <ul>
             <li><a href="us.html">Qui sommes nous ?</a></li>
