--- a/pages/us.html
+++ b/pages/us.html
@@ -33,7 +33,7 @@
     </nav>
 
     <main>
-        <h3 style="margin: 0">Qui sommes nous ?</h3>
+        <h3 style="margin-left: 0">Qui sommes nous ?</h3>
         <h4></h4>
         <p>Ce site a été créé dans le carde d'un projet de DUT.</p>
         <p>Je m'apelle Anthelme Buchaille, et je suis étudiant en DUT Informatique. Ce site est mon travail pour le module Web.</p>
