Final indentation check on all files

--- a/pages/ourMethods.html
+++ b/pages/ourMethods.html
@@ -25,9 +25,9 @@
             <li><a href="chrismasMasks.html">Masques de Noël</a></li>
             <li id="search">
                 <form action="searchPage.html">
-                    <button class="button" type="submit" ><span>Rechercher</span></button>
-                    <input type="text"  placeholder="ex: Masque Bleu" value="" id="search-query">
-                  </form>
+                    <button class="button" type="submit"><span>Rechercher</span></button>
+                    <input type="text" placeholder="ex: Masque Bleu" value="" id="search-query">
+                </form>
             </li>
         </ul>
     </nav>
@@ -36,10 +36,13 @@
 
         <h3 style="margin-left: 0">Détails techniques :</h3>
         <p>Fonctionnement de notre site : </p>
-        <p>Pour que votre design soit en vente sur notre site, vous devez nous l'envoyer en message privé sur notre compte instagram.</p>
-        <p>Ensuite, si nous le selectionons, nous le posterons sur le compte, et si les followers l'aprécient (beaucoup de like), nous le mettrons alors en production et en vente sur le site !</p>
+        <p>Pour que votre design soit en vente sur notre site, vous devez nous l'envoyer en message privé sur notre
+            compte instagram.</p>
+        <p>Ensuite, si nous le selectionons, nous le posterons sur le compte, et si les followers l'aprécient (beaucoup
+            de like), nous le mettrons alors en production et en vente sur le site !</p>
         <p>Les masques sont d'une grande qualité, probablement la meilleur du marché en France !</p>
-        <p>Ils sont constitué de deux couches de tissus entre lesquelles vous pourez insérer un filtre pour bénéficier d'encore plus de sécurité.</p>
+        <p>Ils sont constitué de deux couches de tissus entre lesquelles vous pourez insérer un filtre pour bénéficier
+            d'encore plus de sécurité.</p>
         <p>Si vosu avez des questions, vous pouvez nous contacter sur instagram !</p>
 
     </main>
@@ -50,7 +53,7 @@
             <li><a href="ourMethods.html">Détails tecniques</a></li>
         </ul>
     </footer>
-    
+
 </body>
 
 </html>
