--- a/pages/productPage.html
+++ b/pages/productPage.html
@@ -25,9 +25,9 @@
             <li><a href="chrismasMasks.html">Masques de Noël</a></li>
             <li id="search">
                 <form action="searchPage.html">
-                    <button class="button" type="submit" ><span>Rechercher</span></button>
-                    <input type="text"  placeholder="ex: Masque Bleu" value="" id="search-query">
-                  </form>
+                    <button class="button" type="submit"><span>Rechercher</span></button>
+                    <input type="text" placeholder="ex: Masque Bleu" value="" id="search-query">
+                </form>
             </li>
         </ul>
     </nav>
@@ -42,13 +42,16 @@
             <div class="productDesc">
                 <h4>Masque motif guirlande colorée</h4>
                 <p>
-                    Nos masque sont d'une qualité exeptionnelle afin de vous apporter un confort utlime pendant vos longues journés au travail. 
-                    Notre methode d'impression est infaillible, et malgré de futurs nombreux lavages, Le motif restera toujours aussi net.
+                    Nos masque sont d'une qualité exeptionnelle afin de vous apporter un confort utlime pendant vos
+                    longues journés au travail.
+                    Notre methode d'impression est infaillible, et malgré de futurs nombreux lavages, Le motif restera
+                    toujours aussi net.
                 </p>
-                
+
                 <p>
                     Les masque sont lavables autant de fois que vous le souhaitez.
-                    Ils sont constitués de deux couches, entres lesquels vous pouvez inserer un filtre pour encore plus de sécurité.
+                    Ils sont constitués de deux couches, entres lesquels vous pouvez inserer un filtre pour encore plus
+                    de sécurité.
                 </p>
             </div>
 
@@ -68,7 +71,7 @@
             <li><a href="ourMethods.html">Détails tecniques</a></li>
         </ul>
     </footer>
-    
+
 </body>
 
 </html>
