--- a/pages/us.html
+++ b/pages/us.html
@@ -25,9 +25,9 @@
             <li><a href="chrismasMasks.html">Masques de Noël</a></li>
             <li id="search">
                 <form action="searchPage.html">
-                    <button class="button" type="submit" ><span>Rechercher</span></button>
-                    <input type="text"  placeholder="ex: Masque Bleu" value="" id="search-query">
-                  </form>
+                    <button class="button" type="submit"><span>Rechercher</span></button>
+                    <input type="text" placeholder="ex: Masque Bleu" value="" id="search-query">
+                </form>
             </li>
         </ul>
     </nav>
@@ -36,11 +36,15 @@
         <h3 style="margin-left: 0">Qui sommes nous ?</h3>
         <h4></h4>
         <p>Ce site a été créé dans le carde d'un projet de DUT.</p>
-        <p>Je m'apelle Anthelme Buchaille, et je suis étudiant en DUT Informatique. Ce site est mon travail pour le module Web.</p>
-        <p>Le but était de faire une maquete de site de vente en ligne, je me suis dit que les masques étaient d'actualité, donc j'ai choisis ce thème.</p>
-        <p>J'ai choisis de créer un paterne et de le garder sur tout le site, ainsi que de garder une certaine pallette de couleur afin de grader la même identitée sur toutes les pages.</p>
+        <p>Je m'apelle Anthelme Buchaille, et je suis étudiant en DUT Informatique. Ce site est mon travail pour le
+            module Web.</p>
+        <p>Le but était de faire une maquete de site de vente en ligne, je me suis dit que les masques étaient
+            d'actualité, donc j'ai choisis ce thème.</p>
+        <p>J'ai choisis de créer un paterne et de le garder sur tout le site, ainsi que de garder une certaine pallette
+            de couleur afin de grader la même identitée sur toutes les pages.</p>
         <p>Ce choix m'a permi d'avoir un rendu propre, minimaliste et, je trouve, professionnel.</p>
-        <p>Je suis pas a l'orginine des design et des images des masques. Si vous voulez en acheter, ils sont en vente sur <a href="https://www.redbubble.com/">Redbubble</a>.</p>
+        <p>Je suis pas a l'orginine des design et des images des masques. Si vous voulez en acheter, ils sont en vente
+            sur <a href="https://www.redbubble.com/">Redbubble</a>.</p>
         <p>Ce site a été créé avec pour contraintes :</p>
         <ol id="constraints">
             <li>Utilisation exlusive de HTML et CSS (pas de framework, javascript, php ou autre langage)</li>
@@ -59,7 +63,7 @@
             <li><a href="ourMethods.html">Détails tecniques</a></li>
         </ul>
     </footer>
-    
+
 </body>
 
 </html>
